<resources>
    <string name="app_name">安全卫士</string>
    <string name="trafic_control">流量统计</string>
    <string name="setting_app_lock">程序锁设置</string>
    <string name="popup_uninstall">卸载</string>
    <string name="popup_open">打开</string>
    <string name="popup_share">分享</string>
    <string name="progress_manager_title">进程管理</string>
    <string name="popup_info">信息</string>
    <string name="progress_count">进程数:</string>
    <string name="progress_rom">内存:</string>
    <string name="item_progress_name">进程名:</string>
    <string name="item_progress_size">进程占用的大小:</string>
    <string name="sample_device_admin_description">手机防盗描述内容</string>
    <string name="sample_device_admin">手机防盗</string>
    <string name="add_admin_extra_app_text">开启手机防盗保护的描述</string>
    <string name="number_address">号码归属地查询</string>
    <string name="number_input">请输入手机号码:</string>
    <string name="number_btn_query">查询</string>
    <string name="number_query_address">归属地:</string>
    <string name="common_tool">常用工具</string>
    <string name="common_number">常用号码查询</string>
    <string name="common_number_query">常用号码查询</string>
    <string name="group_title">group的title</string>
    <string name="child_name">child的名字</string>
    <string name="child_number">child的number</string>
    <string name="activity_setting_text">设置中心</string>
    <string name="app_manager_memory">内存:</string>
    <string name="app_manager_text_left">左侧的文本</string>
    <string name="app_manager_text_right">右侧的文本</string>
    <string name="app_manager_name">软件管家</string>
    <string name="app_manager_sd">SD卡:</string>
    <string name="app_manager_item_am_name">名称</string>
    <string name="app_manager_item_am_space">空间</string>
    <string name="app_manager_item_am_install">安装位置</string>
    <string name="reverse_choose_all">反选</string>
    <string name="choose_all">全选</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="accesility_service_lable">程序锁功能</string>
    <string name="progress_name">应用名称</string>
    <string name="accessibility_service_description">小米手机卫士程序锁,给你的应用带来安全</string>
    <string name="program_name">应用名称</string>
    <string name="program_cache_name">应用缓存大小</string>
    <string name="cc_btn_quckly_scan">快速扫描</string>
    <string name="cc_tv_cache_detail">缓存情况</string>
    <string name="cc_btn_clear">一键清理</string>
    <string name="item_cache_tv_name">应用名称</string>
    <string name="item_cache_tv_cachesize">应用缓存大小</string>
    <string name="antivirus_title">手机杀毒</string>
    <string name="item_anvirus_name">应用名称</string>
    <string name="item_anvirus_isvirus">是否是病毒</string>

</resources>
