<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/popup_tv_unintsll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2dp"
        android:drawableTop="@drawable/ic_uninstall"
        android:drawablePadding="@dimen/padding_2dp"
        android:gravity="center_horizontal"
        android:text="@string/popup_uninstall"
        android:textSize="@dimen/btn_query_12sp" />

    <TextView
        android:id="@+id/popup_tv_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2dp"
        android:drawableTop="@drawable/ic_open"
        android:drawablePadding="@dimen/padding_2dp"
        android:gravity="center_horizontal"
        android:text="@string/popup_open"
        android:textSize="@dimen/btn_query_12sp" />

    <TextView
        android:id="@+id/popup_tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2dp"
        android:drawableTop="@drawable/ic_share"
        android:drawablePadding="@dimen/padding_2dp"
        android:gravity="center_horizontal"
        android:text="@string/popup_share"
        android:textSize="@dimen/btn_query_12sp" />

    <TextView
        android:id="@+id/popup_tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2dp"
        android:drawableTop="@drawable/ic_info"
        android:drawablePadding="@dimen/padding_2dp"
        android:gravity="center_horizontal"
        android:text="@string/popup_info"
        android:textSize="@dimen/btn_query_12sp" />
</LinearLayout>