<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/titleBarStyle"
        android:text="缓存清理" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_120dp"
        android:background="@color/title_bg">
        <!--        扫描中-->
        <RelativeLayout
            android:id="@+id/cc_rl_scanning_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/cc_rl_icon_container"
                android:layout_width="@dimen/height_80dp"
                android:layout_height="@dimen/width_80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:background="@drawable/scan_bg">
                <!--                    应用图标-->
                <ImageView
                    android:id="@+id/cc_iv_icon"
                    android:layout_width="@dimen/width_60dp"
                    android:layout_height="@dimen/height_60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_default" />
                <!--                扫描的线-->
                <ImageView
                    android:id="@+id/cc_iv_scan_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scan_line" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_toRightOf="@+id/cc_rl_icon_container"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/cc_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/progress_horizontal" />
                <!--                    应用名称-->
                <TextView
                    android:id="@+id/cc_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:singleLine="true"
                    android:text="@string/program_name"
                    android:textColor="@color/program_text_color"
                    android:textSize="@dimen/cc_program_text_size" />
                <!--                        应用缓存大小-->
                <TextView
                    android:id="@+id/cc_tv_cachesize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:singleLine="true"
                    android:text="@string/program_cache_name"
                    android:textColor="@color/program_text_color"
                    android:textSize="@dimen/cc_program_text_size" />
            </LinearLayout>
        </RelativeLayout>
        <!--        扫描结束后-->
        <RelativeLayout
            android:id="@+id/cc_rl_scanned_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cc_btn_scan"
                style="@style/btnOkNormal"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_8dp"
                android:text="@string/cc_btn_quckly_scan" />

            <TextView
                android:id="@+id/cc_tv_cache_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_toLeftOf="@id/cc_btn_scan"
                android:text="@string/cc_tv_cache_detail"
                android:textColor="@color/program_text_color"
                android:textSize="@dimen/cc_program_text_size" />
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/cc_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100" />

    <Button
        android:id="@+id/cc_btn_clear"
        style="@style/btnOkNormal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/cc_btn_clear" />
</LinearLayout>